name:                nitrogen
version:             0.0.0.0
synopsis:            P2P messaging.
-- description:         
license:             MIT
license-file:        LICENSE
author:              David Hinkes
maintainer:          david.hinkes@gmail.com
-- copyright:           
category:            Network
build-type:          Simple
cabal-version:       >=1.8

library
  -- exposed-modules:     
  -- other-modules:       
  build-depends: base ==4.6.*,
                 hstack
